@@ -42,6 +42,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
         SunOS 3.x, 4.x and 5.x before 5.3.2, and Ultrix.
       Add a new test program for pcap_activate().
       Make NetBSD build warning-free.
+      Fix propagation of cc_werr_cflags() output.
     Hurd:
       Support network capture devices too.
       Fix a few device activation bugs.
